feat: Added support for GraalVM and GluonFX native image generation
Replaced JavaPackager with GraalVM CE to generate native image for Drifty CLI and GluonFX to generate the native image for Drifty GUI. Some styling changes were made along with the complete replacement of java.awt classes with javafx.Stage for getting screen size and getHostServices() method of javafx.Application to open web pages for all Operating Systems