@@ -13,8 +13,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.0</junit.version>
         <javafx.version>20</javafx.version>
+        <gluonfx-maven-plugin.version>1.0.19</gluonfx-maven-plugin.version>
+        <native-maven-plugin.version>0.9.13</native-maven-plugin.version>
         <guiMain>GUI.Launcher</guiMain>
-        <cliMain>CLI.DriftyCLI</cliMain>
+        <cliMain>CLI.Drifty_CLI</cliMain>
     </properties>
 
     <dependencies>
@@ -70,178 +72,191 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>18</source>
-                    <target>18</target>
+                    <source>20</source>
+                    <target>20</target>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>io.github.fvarrui</groupId>
-                <artifactId>javapackager</artifactId>
-                <version>1.7.2</version>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
                 <configuration>
-                    <name>Drifty</name>
-                    <displayName>Drifty</displayName>
-                    <description>Drifty is an open-source interactive file downloader system</description>
-                    <bundleJre>true</bundleJre>
-                    <generateInstaller>true</generateInstaller>
-                    <licenseFile>LICENSE</licenseFile>
-                    <url>https://saptarshisarkar12.github.io/Drifty/</url>
-                    <assetsDir>./assets</assetsDir>
-                    <organizationName>Drifty</organizationName>
-                    <organizationUrl>https://saptarshisarkar12.github.io/Drifty/</organizationUrl>
-                    <version>${project.version}</version>
-                    <additionalModules>jdk.crypto.cryptoki</additionalModules> <!-- To prevent SSL Handshake Error -->
-                    <linuxConfig>
-                        <generateAppImage>true</generateAppImage>
-                        <generateDeb>true</generateDeb>
-                        <generateRpm>true</generateRpm>
-                    </linuxConfig>
-                    <winConfig>
-                        <!-- general properties -->
-                        <icoFile>./assets.windows.Drifty.ico</icoFile>
-                        <generateSetup>false</generateSetup>
-                        <generateMsi>true</generateMsi>
-                        <!-- exe creation properties -->
-                        <headerType>gui</headerType>
-                        <wrapJar>true</wrapJar>
-                        <companyName>Drifty</companyName>
-                        <fileVersion>${project.version}.0</fileVersion>
-                        <txtFileVersion>${project.version}</txtFileVersion>
-                        <productVersion>${project.version}.0</productVersion>
-                        <txtProductVersion>${project.version}</txtProductVersion>
-                        <fileDescription>Drifty windows executable</fileDescription>
-                        <copyright>Drifty</copyright>
-                        <productName>${project.name}</productName>
-                        <internalName>${project.name}</internalName>
-                        <originalFilename>${project.name}.exe</originalFilename>
-                        <!-- choose EXE creation tool -->
-                        <exeCreationTool>launch4j</exeCreationTool>
-                    </winConfig>
-                    <macConfig>
-                        <!-- general properties -->
-                        <appId>${project.name}</appId>
-                        <icnsFile>./assets.mac.Drifty.icns</icnsFile>
-                        <generateDmg>true</generateDmg>
-                        <generatePkg>true</generatePkg>
-                        <relocateJar>false</relocateJar>
-                        <macStartup>UNIVERSAL</macStartup>
-                        <codesignApp>false</codesignApp>
-                        <!-- properties used for DMG disk image generation -->
-                        <volumeName>${project.name}</volumeName>
-                        <!-- properties used for Info.plist file generation -->
-                        <infoPlist>
-                            <bundlePackageType>APPL</bundlePackageType>
-                        </infoPlist>
-                    </macConfig>
+                    <mainClass>${guiMain}</mainClass>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>bundling-Drifty-GUI-for-windows-latest</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <bundleJre>true</bundleJre>
-                            <platform>windows</platform>
-                            <mainClass>${guiMain}</mainClass>
-                            <outputDirectory>./target/GUI/windows</outputDirectory>
-                            <createZipball>true</createZipball>
-                            <additionalResources>
-                                <additionalResource>Drifty Banner.png</additionalResource>
-                                <additionalResource>src/main/resources/yt-dlp.exe</additionalResource>
-                            </additionalResources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>bundling-Drifty-GUI-for-ubuntu-latest</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <bundleJre>true</bundleJre>
-                            <platform>linux</platform>
-                            <mainClass>${guiMain}</mainClass>
-                            <outputDirectory>./target/GUI/linux</outputDirectory>
-                            <createTarball>true</createTarball>
-                            <additionalResources>
-                                <additionalResource>Drifty Banner.png</additionalResource>
-                                <additionalResource>src/main/resources/yt-dlp</additionalResource>
-                            </additionalResources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>bundling-Drifty-GUI-for-macos-latest</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <bundleJre>true</bundleJre>
-                            <platform>mac</platform>
-                            <mainClass>${guiMain}</mainClass>
-                            <outputDirectory>./target/GUI/mac</outputDirectory>
-                            <createTarball>true</createTarball>
-                            <additionalResources>
-                                <additionalResource>Drifty Banner.png</additionalResource>
-                                <additionalResource>src/main/resources/yt-dlp_macos</additionalResource>
-                            </additionalResources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>bundling-Drifty-CLI-for-windows-latest</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <bundleJre>true</bundleJre>
-                            <platform>windows</platform>
-                            <mainClass>${cliMain}</mainClass>
-                            <outputDirectory>./target/CLI/windows</outputDirectory>
-                            <createZipball>true</createZipball>
-                            <additionalResources>
-                                <additionalResource>src/main/resources/yt-dlp.exe</additionalResource>
-                            </additionalResources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>bundling-Drifty-CLI-for-ubuntu-latest</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <bundleJre>true</bundleJre>
-                            <platform>linux</platform>
-                            <mainClass>${cliMain}</mainClass>
-                            <outputDirectory>./target/CLI/linux</outputDirectory>
-                            <createTarball>true</createTarball>
-                            <additionalResources>
-                                <additionalResource>src/main/resources/yt-dlp</additionalResource>
-                            </additionalResources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>bundling-Drifty-CLI-for-macos-latest</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <bundleJre>true</bundleJre>
-                            <platform>mac</platform>
-                            <mainClass>${cliMain}</mainClass>
-                            <outputDirectory>./target/CLI/mac</outputDirectory>
-                            <createTarball>true</createTarball>
-                            <additionalResources>
-                                <additionalResource>src/main/resources/yt-dlp_macos</additionalResource>
-                            </additionalResources>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>build-drifty-cli-for-windows-latest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <imageName>Drifty CLI</imageName>
+                            <mainClass>${cliMain}</mainClass>
+                            <buildArgs>
+                                <buildArg>--enable-url-protocols=https</buildArg>
+                                <buildArg>--enable-url-protocols=http</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                                <buildArg>--verbose</buildArg>
+                            </buildArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>build</id>
+                                <configuration>
+                                    <outputDirectory>target/CLI/windows</outputDirectory>
+                                    <buildArgs>
+                                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-windows.json</arg>
+                                    </buildArgs>
+                                </configuration>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>build-drifty-cli-for-ubuntu-latest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <imageName>Drifty CLI</imageName>
+                            <mainClass>${cliMain}</mainClass>
+                            <buildArgs>
+                                <buildArg>--enable-url-protocols=https</buildArg>
+                                <buildArg>--enable-url-protocols=http</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                                <buildArg>--verbose</buildArg>
+                            </buildArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>build</id>
+                                <configuration>
+                                    <outputDirectory>target/CLI/linux</outputDirectory>
+                                    <buildArgs>
+                                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-linux.json</arg>
+                                    </buildArgs>
+                                </configuration>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>build-drifty-cli-for-macos-latest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <imageName>Drifty CLI</imageName>
+                            <mainClass>${cliMain}</mainClass>
+                            <buildArgs>
+                                <buildArg>--enable-url-protocols=https</buildArg>
+                                <buildArg>--enable-url-protocols=http</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                                <buildArg>--verbose</buildArg>
+                            </buildArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>build</id>
+                                <configuration>
+                                    <outputDirectory>target/CLI/mac</outputDirectory>
+                                    <buildArgs>
+                                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-mac.json</arg>
+                                    </buildArgs>
+                                </configuration>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>build-drifty-gui</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.gluonhq</groupId>
+                        <artifactId>gluonfx-maven-plugin</artifactId>
+                        <version>${gluonfx-maven-plugin.version}</version>
+                        <configuration>
+                            <mainClass>${guiMain}</mainClass>
+                            <nativeImageArgs>
+                                <arg>--enable-url-protocols=https</arg>
+                                <arg>--enable-url-protocols=http</arg>
+                                <arg>--no-fallback</arg>
+                                <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
+                            </nativeImageArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>windows-latest</id>
+                                <configuration>
+                                    <resourcesList>yt-dlp.exe</resourcesList>
+                                </configuration>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>ubuntu-latest</id>
+                                <configuration>
+                                    <resourcesList>yt-dlp</resourcesList>
+                                </configuration>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>macos-latest</id>
+                                <configuration>
+                                    <resourcesList>yt-dlp_macos</resourcesList>
+                                </configuration>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
